feat: Add Generic API for fields Translations - MEED-2109 - Meeds-io/MIPs#49 (#2574)
This change will allow to translate any field in Meeds for any type of
object. This framework allows to add a dedicated translation endpoints
and Vue components to edit translated fields.